--- a/get-in-line/src/pages/login.css
+++ b/get-in-line/src/pages/login.css
@@ -1,33 +1,152 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+.body {
+  background-color: #FAFAFA;
+  margin: 0;
+  padding: 0;
+
+}
+
+.title {
+    text-transform: capitalize;
+    font-size: 2.0em;
+    font-weight: 300;
+    padding: 20px 0;
+    padding-bottom: 10px;
+    font-family: 'Roboto', sans-serif;
+  }
+
 .login {
   height: 100vh;
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Roboto', sans-serif;
+
 }
 .login__container {
+
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #dcdcdc;
-  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(0, 0, 0, 0.12);
+  overflow: hidden;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+  border-radius: 5%;
+
 }
 .login__textBox {
   padding: 10px;
   font-size: 18px;
   margin-bottom: 10px;
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+
 }
-.login__btn {
-  padding: 10px;
-  font-size: 18px;
-  margin-bottom: 10px;
-  border: none;
-  color: white;
-  background-color: black;
-}
-.login__google {
-  background-color: #4285f4;
-}
+
+
 .login div {
   margin-top: 7px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.login__btn {
+  border-radius: 4px;
+  background-color: #007AFF;
+  border: none;
+  color: #FFF;
+  text-align: center;
+  font-size: 20px;
+  padding: 15px 10px;
+  width: 60%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 30px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-family: 'Roboto', sans-serif;
+}
+
+.login__btn span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.login__btn span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -10px;
+  transition: 0.5s;
+}
+
+.login__btn:hover span {
+  padding-right: 25px;
+}
+
+.login__btn:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.login__google {
+  border-radius: 2px;
+  background-color: #007AFF;
+  border: none;
+  color: #FFF;
+  text-align: center;
+  font-size: 20px;
+  padding: 15px 10px;
+  width: 60%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 10px 0;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-family: 'Roboto', sans-serif;
+
+}
+
+.login__google span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.login__google span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -10px;
+  transition: 0.5s;
+}
+
+.login__google:hover span {
+  padding-right: 25px;
+}
+
+.login__google:hover span:after {
+  opacity: 1;
+  right: 0;
 }
